<resources>
    <string name="app_name">FitnessApp</string>
    <string name="title_home">Home</string>
    <string name="title_sale">Sale</string>
    <string name="title_coach">Coach</string>
    <string name="title_schede">Schede</string>
    <string name="title_account">Account</string>
    <string name="lbl_fitnessapp">FitnessApp</string>
    <string name="lbl_accedi">Accedi</string>
    <string name="lbl_registrati">Registrati</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_conferma_password">Ripeti Password</string>
    <string name="lbl_inserisci_email">Inserisci la tua email</string>
    <string name="lbl_inserisci_password">Inserisci la tua password</string>
    <string name="lbl_password_non_corrispondenti">Le password non corrispondono</string>
    <string name="lbl_email_non_valida">Email non valida</string>
    <string name="lbl_password_non_valida">Password non valida</string>
    <string name="lbl_parlaci_di_te_stesso">Parlaci di te stesso</string>
    <string name="lbl_per_darvi_una_m">Per darvi una migliore esperienza abbiamo bisogno di conoscere il vostro genere</string>
    <string name="lbl_uomo">Uomo</string>
    <string name="lbl_donna">Donna</string>
    <string name="lbl_successivo">Successivo</string>
    <string name="err_seleziona_genere">Seleziona il tuo genere</string>
    <string name="lbl_quanti_anni_hai">Quanti anni hai?</string>
    <string name="lbl_aiuta_il_tuo_coach">Questo aiuta i coach a creare il tuo piano personalizzato</string>
    <string name="lbl_quato_pesi">Quanto pesi?</string>
    <string name="lbl_inserisci_peso">Inserisci il tuo peso in kilogrammi. Puoi sempre cambiarlo in seguito.</string>
    <string name="lbl_quanto_sei_alto">Quanto sei alto?</string>
    <string name="lbl_inserisci_altezza">Inserisci la tua altezza in centimetri. Questo aiuta i coach a creare il tuo piano personalizzato</string>
    <string name="lbl_inizia">Inizia</string>
    <string name="lbl_aggiungi_scheda">Aggiungi Scheda</string>
    <string name="schede_attive">Schede attive</string>
    <string name="seleziona_una_scheda">Seleziona una scheda</string>
    <string name="informazioni_personali">Infromazioni personali</string>
    <string name="abbonamento">Abbonamento</string>
    <string name="progressi">Progressi</string>
    <string name="obiettivi">Obiettivi</string>
    <string name="sign_out">Discontettiti</string>
    <string name="lbl_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a massa lobortis, fringilla eros ac, pharetra dolor. Sed gravida sem sed tincidunt posuere. Ut lacinia nunc lobortis nibh facilisis tincidunt. Mauris consectetur non urna in dictum. Mauris at pretium nibh, at ullamcorper leo. Donec consectetur libero sapien, sed congue mi varius ac. Proin ornare non tortor eu ornare.</string>
    <string name="lbl_esercizi">Esercizi</string>
    <string name="aggiungi_scheda">Aggiungi Scheda</string>
    <string name="dettaglio_scheda">Dettaglio Scheda</string>
    <string name="età">Età</string>
    <string name="peso">Peso</string>
    <string name="genere">Genere</string>
    <string name="modifica_informazioni">Modifica</string>
    <string name="nome_esercizio">Nome esercizio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_informazioni_personali">Informazioni personali</string>
    <string name="lbl_cognome">Cognome</string>
    <string name="lbl_nome">Nome</string>
    <string name="descrizione">Descrizione</string>
    <string name="video_descrizione">Video descrizione</string>
    <string name="video_spiegazione">Video spiegazione</string>
    <string name="dettaglio_esercizio">Dettaglio esercizio</string>
    <string name="purtroppo_il_video_non_ancora_disponibile">Purtroppo il video non è ancora disponibile</string>
    <string name="inserisci_il_nome">Inserisci il nome</string>
    <string name="inserisci_il_cognome">Inserisci il cognome</string>
    <string name="rimuovi_scheda">Rimuovi scheda</string>
    <string name="la_password_deve_essere_di_almeno_6_caratteri">La password deve essere di almeno 6 caratteri</string>


</resources>