<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sale"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.sale.SaleFragment"
        android:label="@string/title_sale"
        tools:layout="@layout/fragment_sale" />

    <fragment
        android:id="@+id/navigation_coach"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.coach.CoachFragment"
        android:label="@string/title_coach"
        tools:layout="@layout/fragment_coach" />

    <fragment
        android:id="@+id/navigation_schede"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.schede.SchedeFragment"
        android:label="@string/title_schede"
        tools:layout="@layout/fragment_schede" />
    <fragment
        android:id="@+id/navigation_aggiungi_schede"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.schede.AggiungiSchedeFragment"
        android:label="@string/lbl_aggiungi_scheda"
        tools:layout="@layout/fragment_aggiungi_schede_utente" />
    <fragment
        android:id="@+id/navigation_dettaglio_schede"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.schede.DettaglioSchedeFragment"
        android:label="@string/dettaglio_scheda"
        tools:layout="@layout/fragment_dettaglio_scheda" />
    <fragment
        android:id="@+id/navigation_dettaglio_esercizio"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.schede.DettaglioEsercizioFragment"
        android:label="@string/dettaglio_esercizio"
        tools:layout="@layout/fragment_dettaglio_esercizio" />


    <fragment
        android:id="@+id/navigation_account"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_informazioni_personali"
        android:name="it.uniba.dib.piu.softwarechasers.fitnessapp.ui.account.InfoPersonaliFragment"
        android:label="@string/title_informazioni_personali"
        tools:layout="@layout/fragment_informazioni_personali" />
</navigation>