<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/txtAntonregular28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="16.48dp"
        android:singleLine="true"
        android:text="@string/lbl_quanti_anni_hai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/txtActorregular14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="2.2dp"
        android:text="@string/lbl_aiuta_il_tuo_coach"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />

    <NumberPicker
        android:id="@+id/eta_numberPicker"
        style="@style/NumberPickerStyle"
        android:layout_width="113dp"
        android:layout_height="350dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_indietro_eta"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/forma_circolare_bottone_non_selezionato"
        android:drawableTop="@drawable/left_arrow_icon"
        android:drawableTint="@color/white"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_successivo_eta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/lime_A200"
        android:drawableRight="@drawable/baseline_arrow_right_24"
        android:singleLine="true"
        android:text="@string/lbl_successivo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>