<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="417.38dp"
        android:layout_gravity="start"
        android:scaleType="fitXY"
        android:src="@drawable/sfondo" />

    <TextView
        android:id="@+id/label_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        android:textColor="@color/lime_A200"
        android:layout_marginStart="52.74dp"
        android:layout_marginEnd="52.74dp"
        android:layout_marginTop="40dp"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:background="@drawable/bordo_bottom_bianco"
        android:layout_marginStart="52.74dp"
        android:layout_marginEnd="52.74dp"
        android:layout_marginTop="3dp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/label_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_password"
        android:textColor="@color/lime_A200"
        android:layout_marginStart="52.74dp"
        android:layout_marginEnd="52.74dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:background="@drawable/bordo_bottom_bianco"
        android:layout_marginStart="52.74dp"
        android:layout_marginEnd="52.74dp"
        android:layout_marginTop="3dp"
        android:singleLine="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:ellipsize="end"
        android:gravity="center"
        android:id="@+id/btn_login"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/_50pxv"
        android:layout_marginBottom="@dimen/_20pxv"
        android:layout_marginEnd="@dimen/_24pxh"
        android:layout_marginStart="@dimen/_24pxh"
        android:layout_marginTop="@dimen/_41pxv"
        android:layout_width="@dimen/_263pxh"
        android:paddingBottom="@dimen/_13pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_13pxv"
        android:singleLine="true"
        android:text="@string/lbl_accedi"
        android:textAllCaps="false"
        style="@style/btnSolidRounded"
        android:drawableRight="@drawable/baseline_arrow_right_24"/>

</LinearLayout>