<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/collapsing_toolbar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/sfondo_dettaglio_scheda"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/immagine_sfondo_signup"/>

                <!-- Aggiungi qui la tua CardView e altre viste -->

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="460dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_dettaglio_scheda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <TextView
                android:id="@+id/nome_scheda_dettaglio"
                style="@style/txtOpenSansopensanssemibold20_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Nome Scheda"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/tempo_dettaglio_bottone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/forma_circolare_bottone_non_selezionato"
                android:drawableLeft="@drawable/timer_svgrepo_com"
                android:text="0 min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nome_scheda_dettaglio" />

            <Button
                android:id="@+id/calorie_dettaglio_bottone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="72dp"
                android:background="@drawable/forma_circolare_bottone_non_selezionato"
                android:drawableLeft="@drawable/flame_fire_svgrepo_com"
                android:text="0 kcal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tempo_dettaglio_bottone"
                app:layout_constraintTop_toBottomOf="@+id/nome_scheda_dettaglio" />

            <TextView
                android:id="@+id/descr_dettaglio_scheda"
                style="@style/txtOpenSansopensansregular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/lbl_lorem_ipsum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calorie_dettaglio_bottone"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textView5"
                style="@style/txtOpenSansopensansregular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/lbl_esercizi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descr_dettaglio_scheda" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_dettaglio_scheda_esercizi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_aggiungi_scheda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_margin="80dp"
        android:backgroundTint="@color/lime_A200"
        android:text="@string/lbl_aggiungi_scheda"
        android:layout_gravity="center|bottom"/>
</FrameLayout>